--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "cron": "^1.2.1",
     "express": "^4.15.2",
+    "kue": "^0.11.5",
     "mongoose": "^4.9.2",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-unique-validator": "^1.0.5",
