--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "cheerio": "^0.22.0",
     "cron": "^1.2.1",
     "express": "^4.15.2",
+    "he": "^1.1.1",
     "kue": "^0.11.5",
     "mongoose": "^4.9.2",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-unique-validator": "^1.0.5",
-    "request": "^2.81.0",
-    "sleep": "^5.1.0"
+    "request": "^2.81.0"
   }
 }
